--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <body>
     <div class="main">
       <div class="box">
+        <a href="some@email.com" class="contacts">Mail</a>
+        <a href="phone" class="contacts">Phone</a>
         <figure>
           <img
             src="	https://i.ibb.co/nQ2XH3L/profile.png"
