--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
   <body>
     <div class="main">
       <div class="box">
-        <a href="some@email.com" class="contacts">Mail</a>
-        <a href="phone" class="contacts">Phone</a>
+      
         <figure>
           <img
             src="	https://i.ibb.co/nQ2XH3L/profile.png"
@@ -25,6 +24,8 @@
         <p class="title is-4 mt-5">John Smith</p>
         <p class="subtitle is-6">@johnsmith</p>
         <div class="contacts">
+           <a href="mailto:" class="contacts">Mail</a>
+            <a href="tel:" class="contacts">Phone</a>
           <!-- m.mail@example.com -->
           <!-- +12345678 -->
         </div>
